Create header of the landing page

--- a/index.html
+++ b/index.html
@@ -3,5 +3,21 @@
   <head>
     <title>Landing Page</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Header Logo</h1>
+      <ul>
+        <a href="https://www.google.com"><li>header link one</li></a>
+        <a href="https://www.google.com"><li>header link two</li></a>
+        <a href="https://www.google.com"><li>header link three</li></a>
+      </ul>
+
+      <h1>This website is awesome</h1>
+      <p>
+        This website has some subtext that goes here under the main title. It's
+        a smaller font and the color is lower constrant.
+      </p>
+      <button>Sign up</button>
+    </header>
+  </body>
 </html>
