--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Landing Page</title>
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
