--- a/index.html
+++ b/index.html
@@ -6,19 +6,31 @@
   </head>
   <body>
     <header>
-      <h1>Header Logo</h1>
-      <ul>
-        <a href="https://www.google.com"><li>header link one</li></a>
-        <a href="https://www.google.com"><li>header link two</li></a>
-        <a href="https://www.google.com"><li>header link three</li></a>
-      </ul>
+      <div class="nav-bar">
+        <h1 class="header-logo">Header Logo</h1>
+        <div class="links">
+          <ul>
+            <a href="https://www.google.com"><li>header link one</li></a>
+            <a href="https://www.google.com"><li>header link two</li></a>
+            <a href="https://www.google.com"><li>header link three</li></a>
+          </ul>
+        </div>
+      </div>
 
-      <h1>This website is awesome</h1>
-      <p>
-        This website has some subtext that goes here under the main title. It's
-        a smaller font and the color is lower constrant.
-      </p>
-      <button>Sign up</button>
+      <div class="header-content">
+        <div class="header-text">
+          <h1 class="awesome-header">This website is awesome</h1>
+          <p>
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast.
+          </p>
+          <button>Sign up</button>
+        </div>
+
+        <div class="image">
+          <p>this is a placeholder for an image</p>
+        </div>
+      </div>
     </header>
   </body>
 </html>
