--- a/index.html
+++ b/index.html
@@ -32,5 +32,38 @@
         </div>
       </div>
     </header>
+
+    <!---------- SOME RANDOM INFORMATION-->
+
+    <h1 class="random-information">Some random information.</h1>
+    <div class="main-body">
+      <div class="box-container">
+        <div class="box"></div>
+        <p class="box-text">
+          this is some subtext under an illustration or image
+        </p>
+      </div>
+
+      <div class="box-container">
+        <div class="box"></div>
+        <p class="box-text">
+          this is some subtext under an illustration or image
+        </p>
+      </div>
+
+      <div class="box-container">
+        <div class="box"></div>
+        <p class="box-text">
+          this is some subtext under an illustration or image
+        </p>
+      </div>
+
+      <div class="box-container">
+        <div class="box"></div>
+        <p class="box-text">
+          this is some subtext under an illustration or image
+        </p>
+      </div>
+    </div>
   </body>
 </html>
