Complete blue sign up section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       </div>
     </div>
 
+    <!-----QUOTE SECTION-->
+
     <div class="quote">
       <p>
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
@@ -74,6 +76,20 @@
       </p>
 
       <div class="author">-Thor, God of Thunder</div>
+    </div>
+
+    <!--SIGN-UP SECTION-->
+    <div class="action">
+      <div class="blue-box">
+        <div class="action-text">
+          <h1>Call to action! It's time!</h1>
+          <p>
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+
+        <button class="final-button">Sign up</button>
+      </div>
     </div>
   </body>
 </html>
