Complete landing-page footer

--- a/index.html
+++ b/index.html
@@ -91,5 +91,8 @@
         <button class="final-button">Sign up</button>
       </div>
     </div>
+
+    <!--FOOTER SECTION-->
+    <footer>Copyright &#169 The Odin Project 2021</footer>
   </body>
 </html>
